<resources>
    <string name="app_name">TrayNotify</string>
    <string name="sd_permission_denied">Permission denied</string>
    <string name="quick_note">Quick Note</string>
    <string name="completely_tray_clean">Completely Tray Clean</string>
    <string name="notifications">Reminders</string>
    <string name="messages">Messages</string>
    <string name="birthdays">Birthdays</string>
    <string name="rate">Rate</string>
    <string name="feedback">Feedback</string>
    <string name="share">Share</string>
    <string name="clear_forms">Clear Forms</string>
    <string name="message_text">Text:</string>
    <string name="message_title">Title:</string>
    <string name="text_default">Default</string>
    <string name="vibrate">Vibrate</string>
    <string name="pause">Pause</string>
    <string name="repeat">Repeat</string>
    <string name="age">"Age: "</string>
    <string name="today">Today</string>
    <string name="left">"Left: "</string>
    <string name="days">" days"</string>
    <string name="birthday_title">Birthday!</string>
    <string name="years">" years."</string>
    <string name="contacts_access_denied">Contacts access denied</string>
    <string name="pattern">Set pattern</string>
    <string name="days_capital">Days</string>
    <string name="cancel">Cancel</string>
    <string name="melody">Tone</string>
    <string name="sms_access_denied">SMS access denied</string>
    <string name="sec">" sec."</string>
    <string name="times">" times."</string>
    <string name="notes">Quick Notes</string>
    <string name="show_in_tray">Show note in tray</string>
    <string name="tray">Tray</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="sound">Sound</string>
    <string name="vibration">Vibration</string>
    <string name="notification">Notification</string>
    <string name="loading">Loading</string>
    <string name="text_color">Text color</string>
    <string name="text_size">Text size</string>
    <string name="backround">Background</string>
    <string name="note">Note</string>
    <string name="deselect">Deselect</string>
    <string name="sort">Sort</string>
    <string name="days_sort">Days</string>
    <string name="name_sort">Name</string>
    <string name="age_sort">Age</string>
    <string name="search">Search</string>
    <string name="delete_ask">Delete selected notes?</string>
    <string name="delete">Delete</string>
    <string name="select_all">Select All</string>
    <string name="day_of_month"> day of month</string>
    <string name="week">Week</string>
    <string name="repeat_month">Repeat every month</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="repeat_year">Repeat every year</string>
    <string name="sync_birthdays">Sync</string>
    <string name="open_app">Open app</string>
    <string name="settings">Settings</string>
    <string name="choose">Choose</string>
    <string name="clipboard">Clipboard</string>
    <string name="track">Track</string>
    <string name="clear_list">Clear list</string>
    <string name="ask_clear_clip_history">Clear clipboard history?</string>
    <string name="clear">Clear</string>
    <string name="save_clip_hist">Save clipboard history</string>
    <string name="important">Important</string>
    <string name="show_as_popup">Show as popup</string>
    <string name="copy">COPY</string>
    <string name="close">CLOSE</string>
    <string name="n_share">SHARE</string>
    <string name="remove_notification">Remove Notification</string>
    <string name="appearance">Appearance</string>
    <string name="n_back_color">Notification background color</string>
    <string name="text">Text</string>
    <string name="n_text_color">Notification text color</string>
    <string name="actions">Actions</string>
    <string name="show_actions">Show actions panel</string>
    <string name="actions_icon_color">Actions icon colors</string>
    <string name="show_text">Text</string>
    <string name="show_desc_actions">Show description</string>
    <string name="actions_text_color">Actions text color</string>
    <string name="show">Show</string>
    <string name="popup">Popup</string>
    <string name="background_popup">Background color for popup notifications</string>
    <string name="text_color_popup">Text color for popup notifications</string>
    <string name="defaults">Defaults</string>
    <string name="imp_check_by_default">Set important by default</string>
    <string name="notification_pref">Notification</string>
    <string name="show_tray_as_default">Show in tray by default</string>
    <string name="no_sound_summary">No sound</string>
    <string name="standart_dialog_button" >Default</string>
    <string name="no_vibro_dialog_button">No vibro</string>
    <string name="no_vibration_summary">No vibration</string>
    <string name="set_alarms">Set Alarms</string>
    <string name="delays">Delays</string>
    <string name="delay_1">Delay 1</string>
    <string name="delay_2">Delay 2</string>
    <string name="delay_3">Delay 3</string>
    <string name="setting_alarms_dialog">Please, wait...</string>
    <string name="show_birthdays_in_reminders">Show birthdays in reminders</string>
    <string name="day">Day</string>
    <string name="minute_m"> m</string>
</resources>
