<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.kara4k.traynotify.MainActivity">
    <!--<item-->
        <!--android:id="@+id/quick_note"-->
        <!--android:icon="@drawable/ic_note_add_white_24dp"-->
        <!--android:orderInCategory="2"-->
        <!--android:title="@string/quick_note"-->
        <!--app:showAsAction="always" />-->
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search"
        android:orderInCategory="1"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView" />
    <item
        android:id="@+id/sync_birthdays"
        android:icon="@drawable/ic_sync_white_24dp"
        android:title="@string/sync_birthdays"
        android:orderInCategory="4"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/clear_all_clips"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/clear_list"
        android:orderInCategory="4"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_clear_all"
        android:icon="@drawable/ic_delete_sweep_white_24dp"
        android:orderInCategory="4"
        android:title="@string/completely_tray_clean"
        app:showAsAction="always" />



    <item
        android:id="@+id/sort_birth"
        android:icon="@drawable/ic_sort_white_24dp"
        android:orderInCategory="3"
        android:title="@string/sort"
        android:visible="false"
        app:showAsAction="always">
        <menu>
            <group android:checkableBehavior="single"
                android:id="@+id/birthdays_g">
                <item
                    android:id="@+id/sortDaysLeft"
                    android:checked="true"
                    android:title="@string/days_sort" />
                <item
                    android:id="@+id/sortNames"
                    android:title="@string/name_sort" />
                <item
                    android:id="@+id/sortAge"
                    android:title="@string/age_sort" />
            </group>

        </menu>
    </item>

    <item
        android:id="@+id/sort_quick"
        android:icon="@drawable/ic_sort_white_24dp"
        android:orderInCategory="3"
        android:title="@string/sort"
        app:showAsAction="always">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/sort_quick_date"
                    android:checked="true"
                    android:title="Date" />
                <item
                    android:id="@+id/sort_quick_title"
                    android:title="Title" />
                <item
                    android:id="@+id/sort_quick_text"
                    android:title="Text" />
            </group>

        </menu>
    </item>

    <item
        android:id="@+id/sort_rem"
        android:icon="@drawable/ic_sort_white_24dp"
        android:orderInCategory="3"
        android:title="@string/sort"
        android:visible="false"
        app:showAsAction="always">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/sort_rem_create"
                    android:checked="true"
                    android:title="Date" />
                <item
                    android:id="@+id/sort_rem_title"
                    android:title="Title" />
                <item
                    android:id="@+id/sort_rem_text"
                    android:title="Text" />
                <item
                    android:id="@+id/sort_rem_repeat"
                    android:title="Repeat" />
                <item
                    android:id="@+id/sort_rem_birth"
                    android:title="Birthday" />
            </group>

        </menu>
    </item>

    <item
        android:id="@+id/sort_clip"
        android:icon="@drawable/ic_sort_white_24dp"
        android:orderInCategory="3"
        android:title="@string/sort"
        android:visible="false"
        app:showAsAction="always">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/sort_clip_date"
                    android:checked="true"
                    android:title="Date" />
                <item
                    android:id="@+id/sort_clip_text"

                    android:title="Text" />
            </group>

        </menu>
    </item>

    <item
        android:id="@+id/sort_msg"
        android:icon="@drawable/ic_sort_white_24dp"
        android:orderInCategory="3"
        android:title="@string/sort"
        android:visible="false"
        app:showAsAction="always">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/sort_msg_date"
                    android:checked="true"
                    android:title="Date" />
                <item
                    android:id="@+id/sort_msg_title"
                    android:title="Name" />
            </group>

        </menu>
    </item>

</menu>




