<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_margin="@dimen/dimen_default"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_default"
                    android:layout_marginTop="@dimen/dimen_default"
                    android:text="@string/message_title"
                    android:textColor="@android:color/black" />

                <EditText
                    android:id="@+id/editTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_default"
                    android:layout_marginRight="@dimen/dimen_default"
                    android:layout_marginTop="@dimen/dimen_default"
                    android:background="@android:color/transparent"
                    tools:ignore="TextFields" />
            </LinearLayout>

            <View
                style="@style/Divider"
                android:layout_marginLeft="@dimen/dimen_default"
                android:layout_marginRight="@dimen/dimen_default" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="fill"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_default"
                    android:layout_marginTop="@dimen/dimen_default"
                    android:text="@string/message_text"
                    android:textColor="@android:color/black" />

                <EditText
                    android:id="@+id/textedit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_default"
                    android:layout_marginRight="@dimen/dimen_default"
                    android:layout_marginTop="@dimen/dimen_default"
                    android:background="@android:color/transparent"
                    tools:ignore="TextFields" />

            </LinearLayout>

            <View
                style="@style/Divider"
                android:layout_marginLeft="@dimen/dimen_default"
                android:layout_marginRight="@dimen/dimen_default" />


            <com.kara4k.traynotify.MyView
                android:id="@+id/tray"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_default"
                app:CheckVisible="true"
                app:ImageVisible="false"
                app:Text="@string/show_in_tray"
                app:Title="@string/tray"
                app:isChecked="false">

            </com.kara4k.traynotify.MyView>


            <View
                style="@style/Divider"
                android:layout_marginLeft="@dimen/dimen_default"
                android:layout_marginRight="@dimen/dimen_default"
                android:layout_marginBottom="100dp"/>

        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_done_white_24dp" />
</android.support.design.widget.CoordinatorLayout>